[tool.poetry]
name = "toyota"
version = "v2.0.3"
description = "Toyota Connected Services integration for Home Assistant"
authors = ["DurgNomis-drol <simongrud@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
homeassistant = "^2024.0"
pytoyoda = "^2.2"
arrow = "^1.3"

[tool.poetry.dev-dependencies]
homeassistant-stubs = "^2024.0"
voluptuous-stubs = "^0.1"
pre-commit = "^4.1"
pre-commit-hooks = "^5.0"
ruff = "^0.9"
codespell = "^2.4"

[tool.ruff.lint]
select = [
    # Ruff specific
    "RUF",
    # Pylint
    "PL",
    # Pyflakes
    "F",
    # pep8-naming
    "N",
    # Pycodestyle
    "E",
    "W",
    "D",
    # flake8-2020
    "YTT",
    # flake8-async
    "ASYNC",
    # flake8-bugbear
    "B",
    # flake8-unused-arguments
    "ARG",
    # flake8-commas
    "COM",
    # Isort
    "I"
]
extend-ignore = ["PLR2004", "D203", "D213", "COM812"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
