[project]
name = "toyota"
description = "Toyota Connected Services integration for Home Assistant"
license = "MIT"
version = "v2.0.3"
authors = [{name = "DurgNomis-drol", email = "simongrud@gmail.com"}]
requires-python = '>=3.12,<3.14'
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false
requires-poetry = '>=2.0'

[tool.poetry.dependencies]
arrow = "^1.3"
homeassistant = "^2025.0.0"
pytoyoda = "^2.2"

[tool.poetry.group.dev.dependencies]
homeassistant-stubs = "^2025.0"
pre-commit = "^4.1"
voluptuous-stubs = "^0.1"

[tool.ruff.lint]
select = [
    # Ruff specific
    "RUF",
    # Pylint
    "PL",
    # Pyflakes
    "F",
    # pep8-naming
    "N",
    # Pycodestyle
    "E",
    "W",
    "D",
    # flake8-2020
    "YTT",
    # flake8-async
    "ASYNC",
    # flake8-bugbear
    "B",
    # flake8-unused-arguments
    "ARG",
    # flake8-commas
    "COM",
    # Isort
    "I"
]
extend-ignore = ["PLR2004", "D203", "D213", "COM812"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
